// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > Basic rendering > renders content when open 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_6_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_8_"
    tabindex="0"
    type="button"
  >
    Open Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_a_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Basic rendering > renders the trigger properly 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_3_"
    tabindex="0"
    type="button"
  >
    Open Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > Complex dropdown menu > renders all components together properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_6n_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_6p_"
    tabindex="0"
    type="button"
  >
    Complex Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_6r_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Content positioning > applies custom className to content 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_7i_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_7k_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_7m_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Content positioning > renders with custom sideOffset 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_7a_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_7c_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_7e_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > applies custom className 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_2s_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_2u_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_30_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > renders checked state properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_2c_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_2e_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_2g_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuCheckboxItem > renders unchecked state properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_24_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_26_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_28_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > applies custom className 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_1s_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_1u_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_20_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders default variant properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_q_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_s_"
    tabindex="0"
    type="button"
  >
    Open Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_u_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders destructive variant properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_14_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_16_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_18_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuItem > renders with inset properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_1c_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_1e_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_1g_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > applies custom className 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_4e_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_4g_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_4i_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > renders properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_3u_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_40_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_42_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuLabel > renders with inset properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_46_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_48_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_4a_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuRadioGroup and DropdownMenuRadioItem > applies custom className to radio items 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_3m_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_3o_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_3q_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuRadioGroup and DropdownMenuRadioItem > renders radio group properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_34_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_36_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_38_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSeparator > applies custom className 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_4v_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_51_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_53_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSeparator > renders properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_4m_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_4o_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_4q_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuShortcut > applies custom className 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_5e_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_5g_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_5i_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuShortcut > renders properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_56_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_58_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_5a_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > applies custom className to sub components 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_6c_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_6e_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_6g_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > renders sub menu properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_5m_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_5o_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_5q_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > DropdownMenuSub components > renders sub trigger with inset properly 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_61_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_63_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_65_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`DropdownMenu > Error handling > handles disabled state 1`] = `
<DocumentFragment>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <button
    aria-controls="_r_8e_"
    aria-expanded="false"
    aria-haspopup="menu"
    data-popup-open=""
    data-pressed=""
    data-slot="dropdown-menu-trigger"
    id="base-ui-_r_8g_"
    tabindex="0"
    type="button"
  >
    Menu
  </button>
  <span
    data-base-ui-focus-guard=""
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
  <span
    aria-owns="_r_8i_"
    style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
  />
  <span
    data-base-ui-focus-guard=""
    data-type="outside"
    role="button"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="0"
  />
</DocumentFragment>
`;
